30 Aug 2011: Wouter
	- osx xcode status item.

26 Aug 2011: Wouter
	- status control command shows the latest probe results (and exits).
	- use full path for unbound-control (for install in /opt of unbound).
	- icons at 22px on OSX.
	- osx dir and osx fixes: full paths, flush cache when secure again.
	- use scutil to set DNS on osx.

25 Aug 2011: Wouter
	- OSX launchd and loginitem installed.

24 Aug 2011: Wouter
	- configure fixed --with.. and test for sleep and random.

23 Aug 2011: Wouter
	- configure adapted for windows compile.
	- panel compiles and GUI shows with libGTK+-2.0 on windows.

18 Aug 2011: Wouter
	- INSTALL instructions.
	- fixed for ldns linkage.
	- fix generated key permissions, world readable for user keys.
	- tag 0.1

17 Aug 2011: Wouter
	- noaction option that takes no action but pretends.
	- fix linefeed in resolv.conf printout.
	- unsafe test option works reliably.
	- fix dialog destroy that deletes the dialog.
	- alert icon has nicer exclamation mark.
	- added configfile and example.conf.
	- Reprobe command.

16 Aug 2011: Wouter
	- detect localhost in DHCP DNS servers and skip them, because a loop
	  from the resolver to itself is not good.  Since localhost resolver
	  may probe as a good DNS cache itself easily.
	- can detect network disconnect and acts appropriately (very quiet).
	- fix bug with active number of connections.
	- fix nice exit for panel on quit.
	- present insecure or disconnect choice.
	- unbound control hooks.
	- resolv.conf hooks.

15 Aug 2011: Wouter
	- log with time in readable format (to logfile), detects strftime.
	- removed debug printouts.
	- menu is positioned neatly under the statusicon.
	- result window has icon set and a title.
	- fix unref for result_window by reffing it in the init function.
	- stop using deprecated glib function for tooltip.
	- lint fixes.
	- can handle NSEC DS denials if a zone is (temporarily) insecure,
	  detects that the denial is from the parent and contains NSEC.

12 Aug 2011: Wouter